Start redo 1.20.2 update from 1.20.1